adicionando logo da biografia

--- a/index.html
+++ b/index.html
@@ -94,10 +94,10 @@
       <div class="col-sm-4">
           <div class="card card-info-margin" style="width: 18rem;">
             <div class="card-body text-center py-3">
-              <img class="img-fluid bio-img mx-auto" src="assets/elaine-pict.png">
-              <h5 class="card-title">Elaine Duarte Ramos</h5>
-              <p class="card-text">Aqui vai uma breve descrição sobre a autora.</p>
-              <a href="#" class="btn btn-primary" style="border-radius: 0 !important;">Leia minha biografia</a>
+              <img class="img-fluid bio-img mx-auto" src="assets/logo_with_background.png">
+              <h5 class="card-title">Um grito pela paz!</h5>
+              <p class="card-text">Aqui vai uma breve descrição do movimento</p>
+              <a href="#" class="btn btn-primary" style="border-radius: 0 !important;">Mais informações</a>
             </div>
           </div>
           <div class="mt-5">
